# router/routes.go
@@ -3,10 +3,11 @@ package router
 import (
 	"fmt"
 
+	"github.com/luizhirasawa/Go-api.git/docs"
+
 	"github.com/gin-gonic/gin"
 	"github.com/luizhirasawa/Go-api.git/handler"
 
-	docs "github.com/luizhirasawa/Go-api.git/docs"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -17,12 +18,13 @@ func initializeRoutes(router *gin.Engine) {
 	BasePath := "/api/v1"
 	docs.SwaggerInfo.BasePath = BasePath
 	v1 := router.Group(BasePath)
+	path := "/opening"
 	{
-		v1.POST("/opening", handler.PostOpeningHandler)
-		v1.GET("/opening", handler.ShowOpeningHandler)
+		v1.POST(path, handler.PostOpeningHandler)
+		v1.DELETE(path, handler.DeleteOpeningHandler)
+		v1.GET(path, handler.ShowOpeningHandler)
 		v1.GET("/openings", handler.ListOpeningHandler)
-		v1.DELETE("/opening", handler.DeleteOpeningHandler)
-		v1.PUT("/opening", handler.UpdateOpeningHandler)
+		v1.PUT(path, handler.UpdateOpeningHandler)
 	}
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
